--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -2,25 +2,6 @@
   <section class="call-to-action">
     <h1><img src="images/logo.png" class="logo" alt="fun retrospectives logo" />Fun Retrospectives</h1>
     <button class="new-board" ng-click="modalService.openAddNewBoard(this)">NEW BOARD</button>
-    <div id="mc_embed_signup">
-      <form action="//funretrospectives.us13.list-manage.com/subscribe/post?u=a1df66d58e9447064d73bf0bc&amp;id=405856384a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-        <div id="mc_embed_signup_scroll">
-          <div class="mc-field-group">
-            <input type="email" value="" name="EMAIL" placeholder="Enter your email address" class="required email" id="mce-EMAIL" novalidate />
-	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe-button">
-          </div>
-          <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-          </div>
-          <div style="position: absolute; left: -5000px;" aria-hidden="true">
-	    <input type="text" name="b_a1df66d58e9447064d73bf0bc_405856384a" tabindex="-1" value="">
-          </div>
-        </div>
-      </form>
-    </div>
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   </section>
   <section class="step">
     <h2 class="step__name">
@@ -51,5 +32,25 @@
   </section>
   <section>
     <button class="new-board" ng-click="modalService.openAddNewBoard(this)">NEW BOARD</button>
+    <div id="mc_embed_signup">
+      <form action="//funretrospectives.us13.list-manage.com/subscribe/post?u=a1df66d58e9447064d73bf0bc&amp;id=405856384a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+        <div id="mc_embed_signup_scroll">
+          <fieldset class="subscribe">
+            <h2>Wanna be notified of updates?</h2>
+            <input type="email" value="" name="EMAIL" placeholder="Enter your email address" class="subscribe__email" id="mce-EMAIL" novalidate />
+	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
+          </fieldset>
+          <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div>
+          <div style="position: absolute; left: -5000px;" aria-hidden="true">
+	    <input type="text" name="b_a1df66d58e9447064d73bf0bc_405856384a" tabindex="-1" value="">
+          </div>
+        </div>
+      </form>
+    </div>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   </section>
 </div>
