--- a/app/scss/_landing.scss
+++ b/app/scss/_landing.scss
@@ -1,14 +1,23 @@
 .landing {
   text-align: center;
-  font-size: 16px;
 
   .call-to-action {
-    padding: 3em 0;
+    padding: $base-spacing 0;
+  }
+
+  .subscribe {
+    border: 0;
+    margin: 0 auto;
+    width: 80vw;
+    &__email {
+      margin: $base-spacing auto;
+      width: 50%;
+    }
   }
 
   .step {
     color: white;
-    padding: 3em 0;
+    padding: $base-spacing 0;
     margin: 0 auto;
 
     &__name {
@@ -31,18 +40,20 @@
       align-items: center;
       display: flex;
       flex-wrap: wrap;
-      font-size: 1.15em;
-      justify-content: space-around;
+      flex-direction: column;
+      justify-content: space-between;
       margin: 0 auto;
-      padding: 2em;
+      padding: $base-spacing;
 
       @include media(desktop){
+        flex-direction: row;
         flex-wrap: nowrap;
       }
 
       img {
         max-width: 400px;
         width: 80vw;
+        margin: $base-spacing;
       }
       p {
         margin: 0 1.5em 0 0;
@@ -63,26 +74,8 @@
       margin-right: 15px;
     }
   }
-
-  .subscribe-button {
-    @extend .button;
-    width: 120px;
-    height: 40px;
-    background: $light-teal;
-    vertical-align: top;
-    padding: 5px 8px;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    border: 0;
-    border-bottom: 2px solid $dark-blue;
-    border-radius: 2px;
-  }
-
   .new-board {
-    display: block;
-    margin: 0 auto;
-    background: $purple;
-    border-bottom: 2px solid $light-purple;
-    padding: .5em;
+    margin: $base-spacing auto;
+    @include set-button-color($purple);
   }
 }
