--- a/app/scss/config/_colors.scss
+++ b/app/scss/config/_colors.scss
@@ -1,18 +1,18 @@
 $column-colors-main: #4db6ac, #e57373, #ba68c8, #64b5f6, #ffca28, #ffa000;
 $column-colors-votes: #009688, #e6403d, #ab47bc, #039be5, #ffb300, #f57c00;
 
-$grey: #555;
-$light-grey: #777;
+$gray: #555;
+$light-gray: #777;
 $darkest-gray: #333;
-$dark-gray: #8c8c8c;
-$lightest-gray: #d6d6d6;
-$yellow: #ffcf22;
-$teal: #00bcd4;
-$light-teal: #0299ad;
+$dark-gray: #8C8C8C;
+$lightest-gray: #D6D6D6;
+$yellow: #FFCF22;
+$teal: #00BCD4;
+$light-teal: #0299AD;
 $dark-blue: #017280;
-$light-green: #00a946;
-$green: #00c853;
-$red: #ef5350;
-$faded-red: #c33b38;
-$light-purple: #9a38ab;
-$purple: #ba68c8;
+$light-green: #00A946;
+$green: #00C853;
+$red: #EF5350;
+$faded-red: #C33B38;
+$light-purple: #9A38AB;
+$purple: #BA68C8;
