Adds image loading, angular template loading, ngdialog service, and modal service to open modals

--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,6 +1,6 @@
 <div class="landing">
   <section class="call-to-action">
-    <h1><img src="images/logo.png" class="logo" alt="fun retrospectives logo" />Fun Retrospectives</h1>
+    <h1><img src="../images/logo.png" class="logo" alt="fun retrospectives logo" />Fun Retrospectives</h1>
     <button class="new-board" ng-click="modalService.openAddNewBoard(this)">NEW BOARD</button>
   </section>
   <section class="step">
@@ -8,7 +8,7 @@
       Set the context
     </h2>
     <div class="step__screenshot">
-      <img src="images/image1.png" alt="Set the retro context" />
+      <img src="../images/image1.png" alt="Set the retro context" />
       <p>Why is this retrospective being held? What will it cover? Retrospectives, similarly to any other meeting, are more effective if the participants align their expectations before getting into it.</p>
     </div>
   </section>
@@ -18,7 +18,7 @@
     </h2>
     <div class="step__screenshot">
       <p>The statement is invaluable for setting the meeting tone. Make it visible to all participants, and read it out loud before running your retrospective activity.</p>
-      <img src="images/image2.png" alt="Read the prime directive" />
+      <img src="../images/image2.png" alt="Read the prime directive" />
     </div>
   </section>
   <section class="step">
@@ -26,7 +26,7 @@
       Go for it!
     </h2>
     <div class="step__screenshot">
-      <img src="images/image3.png" alt="Fill the board with cards!" />
+      <img src="../images/image3.png" alt="Fill the board with cards!" />
       <p>It is time to gather data, talk about the positive stuff, recognize people and seek improvements. Select an activity, create and customize your board. Go for it!</p>
     </div>
   </section>
