Adds modal templates

--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -1,5 +1,7 @@
 @import '~bourbon/app/assets/stylesheets/bourbon';
 @import '~bourbon-neat/app/assets/stylesheets/neat';
+@import '~ng-dialog/css/ngDialog.min.css';
+@import '~ng-dialog/css/ngDialog-theme-plain.min.css';
 @import './config/colors';
 @import './config/variables';
 @import './config/typography';
