removing analytics directive, fixing header on top of loading and removing domain

--- a/components/spinner.html
+++ b/components/spinner.html
@@ -1,5 +1,5 @@
 <div class="spinner" ng-show="loading">
-    <div class="overlay"></div>
+    <div class="overlay" ng-cloak></div>
     <div class="rect rect1"></div>
     <div class="rect rect2"></div>
     <div class="rect rect3"></div>
