--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -19,12 +19,12 @@
           <div style="position: absolute; left: -5000px;" aria-hidden="true">
             <input type="text" name="b_a1df66d58e9447064d73bf0bc_405856384a" tabindex="-1" value="">
           </div>
-
         </div>
       </form>
     </div>
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+    <p class="website">If you want to learn more about retrospectives, check <a href="http://funretrospectives.com" target="_blank">funretrospectives.com</a></p>
   </section>
   <section class="step">
     <h2>Set the context</h2>
