--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -23,6 +23,16 @@
     }
   }
 
+  a, a:visited, a:focus {
+    color: $purple;
+  }
+
+  p.website {
+    width: 100%;
+    margin: 0;
+    margin-top: 20px;
+  }
+
   h1 {
     margin-top: 0;
     margin-left: 0;
