Deletes unnecessary function changeBoardName after removing functionality to stripe spaces from board

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -19,7 +19,7 @@
 <script type="text/ng-template" id="addNewBoard">
   <h1>New board</h1>
   <p>Board name example: <strong>team-board-123</strong></p>
-  <input ng-model="newBoard.name" ng-change="boardNameChanged()" type="text" placeholder="Board name"></input>
+  <input ng-model="newBoard.name" type="text" placeholder="Board name"></input>
   <button ng-click="createNewBoard()">Create</button>
 </script>
 <script type="text/ng-template" id="deleteCard">
