Fixing homepage on mobile

--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -1,4 +1,4 @@
-<div class="filter-mobile">
+<div class="filter-mobile" ng-show="userId !== ''">
   <label>Filter by</label>
   <select
     ng-model="selectedType"
