--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -1,6 +1,6 @@
 <div class="home" ng-show="userId === ''" ng-cloak>
   <section>
-    <h1><img src="img/logo.png" />Fun Retrospectives</h1>
+    <h1><img src="img/logo.png" />Fun Retro</h1>
     <button ng-click="modalService.openAddNewBoard(this)">NEW BOARD</button>
     <style type="text/css">
       #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -24,7 +24,7 @@
     </div>
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-    <p class="website">If you want to learn more about retrospectives, check <a href="http://funretrospectives.com" target="_blank">funretrospectives.com</a></p>
+    <p class="website">Learn more about retrospectives <a href="http://funretrospectives.com" target="_blank">funretrospectives.com</a></p>
   </section>
   <section class="step">
     <h2>Set the context</h2>
@@ -37,8 +37,8 @@
     <h2>
       Read the prime directive
     </h2>
-  <p class="left">The statement is invaluable for setting the meeting tone. Make it visible to all participants, and read it out loud before running your retrospective activity.</p>
   <img src="img/image2.png"/>
+  <p class="left">The statement is invaluable for setting the meeting tone. Make it visible to all participants, and read it out loud before running your retrospective activity.</p>
   </section>
   <section class="step">
     <h2>
