--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -31,7 +31,7 @@
 <script type="text/ng-template" id="deleteColumn">
   <h1>Delete column</h1>
   <p>Are you sure you want to delete this column?</strong></p>
-  <button class="delete-button" ng-click="deleteLastColumn()">Delete</button>
+  <button class="delete-button" ng-click="deleteColumn(type)">Delete</button>
   <a ng-click="closeAllModals()">Cancel</a>
 </script>
 <script type="text/ng-template" id="mergeCards">
