--- a/components/userVoice.html
+++ b/components/userVoice.html
@@ -9,3 +9,14 @@
   UserVoice.push(['addTrigger', {mode: 'smartvote', trigger_position: 'bottom-right' }]);
   UserVoice.push(['autoprompt', {}]);
 </script>
+<script>
+  <!-- Hotjar Tracking Code for http://funretro.github.io/distributed/ -->
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:258057,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
