adds header to board template

--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -45,3 +45,21 @@
   }
 
 }
+
+header button, .button {
+  padding: 5px 8px;
+  margin-left: 10px;
+  overflow: hidden;
+
+  &.first {
+    background: $purple;
+    border-bottom: 2px solid $light-purple;
+  }
+}
+
+header button:hover {
+  position: relative;
+  top: 2px;
+  margin-bottom: 2px;
+  border-bottom: 0;
+}
