--- a/app/views/board.html
+++ b/app/views/board.html
@@ -1,1 +1,15 @@
-<h1>BOARD</h1>
+<header>
+  <h1>Fun Retro</h1>
+  <div>
+    <div class="prime">
+      <i class="fa fa-star"></i> 
+      Prime Directive
+      <blockquote>
+        <p>Regardless of what we discover, we understand and truly believe that everyone did the best job they could, given what was known at the time, their skills and abilities, the resources available and the situation at hand</p>
+        <footer>In Project Retrospectives, Norm Kerth</footer>
+      </blockquote>
+    </div>
+    <button id="copy-board" ng-click="modalService.openCopyBoard(this)">Export board</button>
+    <button class="first" ng-click="modalService.openAddNewBoard(this)">New board</button>
+  </div>
+</header>
