--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -12,7 +12,7 @@ header {
     float: left;
     margin: 0;
     margin-top: .45em;
-    font-size: 1.82em;
+    font-size: 1.6em;
     line-height: 1em;
   }
 
@@ -81,4 +81,22 @@ header {
       color: $yellow;
     }
   }
+}
+
+header button {
+  font-size: 0.8em;
+  padding: 5px 8px;
+  margin-left: 10px;
+  overflow: hidden;
+
+  &.first {
+    background: $purple;
+  }
+}
+
+header button:hover {
+  position: relative;
+  top: 2px;
+  margin-bottom: 2px;
+  border-bottom: 0;
 }
