fixes menu border and extracts colors from variable

--- a/app/scss/config/_colors.scss
+++ b/app/scss/config/_colors.scss
@@ -1,6 +1,9 @@
 $column-colors-main: #4db6ac, #e57373, #ba68c8, #64b5f6, #ffca28, #ffa000;
 $column-colors-votes: #009688, #e6403d, #ab47bc, #039be5, #ffb300, #f57c00;
 
+$menu-background: #EEE;
+$menu-border: #AAA;
+
 $gray: #555;
 $light-gray: #777;
 $darkest-gray: #333;
