--- a/app/scss/_menu.scss
+++ b/app/scss/_menu.scss
@@ -1,12 +1,12 @@
 .menu {
+  font-size: 0.8em;
   position: relative;
-  top: -1px;
+  top: -3px;
   width: 100%;
-  box-sizing: border-box;
   padding: 10px 15px;
   overflow: hidden;
-  background: #eee;
-  border-top: 2px solid #aaa;
+  background: $menu-background;
+  border-top: 2px solid $menu-border;
 
   h2 { 
     display: inline-block;
