--- a/app/views/board.html
+++ b/app/views/board.html
@@ -1,26 +1,4 @@
 <div ng-include="'views/header.html'"></div>
+<div ng-include="'views/menu.html'"></div>
 
-<section class="menu">
-  <h2>boardId</h2>
-  <div class="menu-controls">
-    <label class="menu-controls">Sort by</label>
-    <select ng-model="sortField">
-      <option value="$id">Created date</option>
-      <option value="votes">Votes</option>
-    </select>
-    <button class="pull-right new-column" ng-click="modalService.openAddNewColumn(this)">New column</button>
-    <!--<button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>-->
-    <button class="pull-right delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
-  </div>
-</section>
-
-<div class="filter-mobile">
-  <label>Filter by</label>
-  <select ng-model="selectedType" ng-options="column.id as column.value for column in board.columns"></select>
-  <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
-</div>
-
-<footer>
-  Fun Retro
-  <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
-</footer>
+<div ng-include="'views/footer.html'"></div>
