imports font-awesome

--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -6,6 +6,7 @@
 @import './config/variables';
 @import './config/typography';
 @import './utilities/responsive';
+@import './utilities/font-awesome/scss/font-awesome.scss';
 @import './buttons';
 @import './forms';
 @import './landing';
