--- a/app/views/board.html
+++ b/app/views/board.html
@@ -1,4 +1,16 @@
 <div ng-include="'views/header.html'"></div>
 <div ng-include="'views/menu.html'"></div>
 
+<span class="container">
+  <span class="message-list" ng-class="{'selected': isColumnSelected(type.id)}">
+    <ul class="column utils.columnClass(type.id)">
+      <div class="column-header">
+        <a class="controls delete" href="javascript:void(0)"><i class="fa fa-times"></i></a>
+        <h2 newName=type.value;"> type.value </h2>
+        <a class="add" href="javascript:void(0)"><i class="fa fa-plus"></i></a>
+      </div>
+    </ul>
+  </span>
+</span>
+
 <div ng-include="'views/footer.html'"></div>
