adds board context input

--- a/app/views/board.html
+++ b/app/views/board.html
@@ -1,5 +1,6 @@
 <div ng-include="'views/header.html'"></div>
 <div ng-include="'views/menu.html'"></div>
+<div ng-include="'views/boardContext.html'"></div>
 
 <section class="board">
   <div>
