enables modalService in board

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -9,7 +9,7 @@
         <footer>In Project Retrospectives, Norm Kerth</footer>
       </blockquote>
     </div>
-    <button id="copy-board" ng-click="modalService.openCopyBoard(this)">Export board</button>
+    <button id="copy-board" ng-click="modalService.openExportBoard(this)">Export board</button>
     <button class="first" ng-click="modalService.openAddNewBoard(this)">New board</button>
   </div>
 </header>
