--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -25,7 +25,7 @@
           </div>
           <li ng-controller="MessageCtrl" id="{{ message.$id }}" enter-click class="message" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}} | orderBy: sortField:getSortOrder()">
             <div messageId="{{ message.$id }}" x-lvl-draggable="true" x-lvl-drop-target="true" x-on-drop="droppedEvent(dragEl, dropEl)">
-              <div class="front">
+              <div class="front" ng-class="{'filter': !message.saved}">
                   <div class="message-body">
                       <div class="text">{{message.text}}</div>
                       <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
@@ -42,7 +42,7 @@
                       <div class="editing">
                           <textarea ng-model="message.text" ng-change="messages.$save(message)"></textarea>
                           <a class="delete-link" href="javascript:void(0)" ng-click="modalService.openDeleteCard(this)"><i class="fa fa-trash"></i></a>
-                          <button ng-click="isEditing = false;">DONE</button>
+                          <button ng-click="isEditing = false;saveMessage(message);">DONE</button>
                       </div>
                   </div>
               </div>
