--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,5 @@
 <footer ng-show="userId !== ''">
   Fun Retro
   <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+  votes remaining: {{ remainingVotes() }}
 </footer>
