--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -31,10 +31,10 @@
                       <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
                   </div>
                   <div class="votes">
-                      <a ng-hide="remainingVotes() === 0" href="javascript:void(0)" ng-click="vote(message.$id, message.votes)">
+                      <a ng-hide="!voteService.isAbleToVote(userId, board.max_votes)" href="javascript:void(0)" ng-click="vote(message.$id, message.votes)">
                           <i class="fa fa-thumbs-o-up"></i>
                       </a>
-                      <strong><a ng-show="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="unvote(message.$id, message.votes)"><i class="fa fa-thumbs-o-down"></i> </a>+ {{ message.votes }}</strong>
+                      <strong><a ng-show="voteService.haveVotedOnMessage(message.$id)" href="javascript:void(0)" ng-click="unvote(message.$id, message.votes)"><i class="fa fa-thumbs-o-down"></i> </a>+ {{ message.votes }}</strong>
                   </div>
               </div>
               <div class="back">
