improve layout of remaining votes

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,3 @@
 <footer ng-show="userId !== ''">
-  Fun Retro
-  <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+  <span class="remaining-votes">Remaining votes: <strong>{{ voteService.remainingVotes(board.max_votes, userId) }}</strong></span>
 </footer>
