--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,7 @@
 <header ng-show="userId !== ''">
     <h1>Fun Retro</h1>
     <span>
+      <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
       <span class="prime">
           <i class="fa fa-star"></i>
           Prime Directive
