--- a/stylesheets/_footer.scss
+++ b/stylesheets/_footer.scss
@@ -1,10 +1,20 @@
-footer {
+page-footer footer {
   position: fixed;
   bottom: 0;
   display: flex;
   width: 100%;
-  padding: 10px 15px;
+  justify-content: flex-end;
+}
+
+.remaining-votes {
+  padding: 8px 12px;
+  margin-right: 10px;
   color: white;
-  align-items: center;
-  background-color: $teal;
+  background: $teal;
+  border-radius: 2px;
+
+  strong {
+    margin: 0;
+    font-size: 1em;
+  }
 }
