--- a/stylesheets/_button.scss
+++ b/stylesheets/_button.scss
@@ -19,7 +19,7 @@ button, .button {
 
   &:disabled {
     cursor: not-allowed;
-    opacity: .65;
+    opacity: 0.65;
   }
 
   &.delete-button {
@@ -36,12 +36,15 @@ header button:hover {
 }
 
 .ngdialog-content button {
+  display: inline-block;
   height: 28px;
   font-size: 1em;
   vertical-align: top;
 }
 
 .ngdialog-content a {
+  display: inline-block;
+  margin-top: 2em;
   margin-left: 10px;
   font-size: 1em;
   color: $light-teal;
@@ -66,7 +69,7 @@ header button:hover {
   height: 20px;
   padding: 0;
   margin-left: 0;
-  font-size: .7em;
+  font-size: 0.7em;
   line-height: 2em;
   background: $green;
 }
