--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -38,3 +38,26 @@
     line-height: 1.3em;
   }
 }
+
+.remaining-votes {
+  padding: 8px 12px;
+  margin-right: 10px;
+  border-radius: 2px;
+  box-shadow: 0 0 0 0 rgba(#5a99d4, 0.5);
+  animation: pulse 1.5s;
+
+  strong {
+    margin: 0;
+    font-size: 1.3em;
+    color: $teal;
+  }
+
+  @-webkit-keyframes pulse {
+    70% {
+      box-shadow: 0 0 0 50px rgba(#5a99d4, 0);
+    }
+    100% {
+      box-shadow: 0 0 0 0 rgba(#5a99d4, 0);
+    }
+  }
+}
