--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -20,7 +20,7 @@
   <h1>New board</h1>
   <p>Board name example: <strong>team-board-123</strong></p>
   <input ng-model="newBoard.name" type="text" placeholder="Board name"></input>
-  <button ng-click="createNewBoard()">Create</button>
+  <button ng-disabled="isBoardNameInvalid()" ng-click="createNewBoard()">Create</button>
 </script>
 <script type="text/ng-template" id="deleteCard">
   <h1>Delete note</h1>
