Add functionality to change the name of the board.
As issue #110 stated, the project lacked functonality to change
the name of the board. You can now click on the name of the board
to change it.

--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -117,14 +117,14 @@ h2 {
   margin-bottom: .5em;
 }
 
-.editing-column input {
+.editing-column input, .editing-board-name input {
   max-width: 300px;
   font-size: 1.3em;
   font-weight: bold;
   color: $dark-gray;
 }
 
-.editing-column .blue {
+.editing-column .blue, .editing-board-name .blue{
   position: relative;
   top: 7px;
   margin-left: 5px;
