--- a/components/menu.html
+++ b/components/menu.html
@@ -1,6 +1,11 @@
 <div ng-show="userId !== ''" class="menu">
-  <h2>{{boardId}}</h2>
-  <span class="menu-controls">
+  <h2 ng-show="!editingBoardName" ng-click="editingBoardName=true;newBoardName=boardId;">{{boardId}}</h2>
+  <span ng-show="editingBoardName" class="editing-board-name">
+    <input ng-model="newBoardName"></input>
+    <button ng-click="changeBoardName(newBoardName);editingBoardName=false;" class="success-button">Save</button>
+    <a class="blue" ng-click="editingBoardName=false;">Cancel</a>
+  </span>
+  <span class="pull-right menu-controls">
     <label class="menu-controls">Sort by</label>
     <select ng-model="sortField">
       <option value="$id">Created date</option>
