Show edit pencil on hover over board name.

--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -144,6 +144,14 @@ ul {
   border: none;
 }
 
+.menu #board-name + .fa-pencil{
+  display: none;
+}
+
+.menu #board-name:hover + .fa-pencil{
+  display: inline-block;
+}
+
 .delete {
   display: inline-block;
   margin-top: 19px;
