--- a/components/menu.html
+++ b/components/menu.html
@@ -1,6 +1,6 @@
 <div ng-show="userId !== ''" class="menu">
   <h2 id="board-name" ng-show="!editingBoardName" ng-click="editingBoardName=true;newBoardName=boardId;">{{boardId}}</h2>
-  <i class="fa fa-pencil"></i>
+  <i class="fa fa-pencil" ng-show="!editingBoardName"></i>
   <span ng-show="editingBoardName" class="editing-board-name">
     <input ng-model="newBoardName"></input>
     <button ng-click="changeBoardName(newBoardName);editingBoardName=false;" class="success-button">Save</button>
