--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -124,7 +124,7 @@ h2 {
   color: $dark-gray;
 }
 
-.editing-column .blue, .editing-board-name .blue{
+.editing-column .blue {
   position: relative;
   top: 7px;
   margin-left: 5px;
@@ -150,6 +150,17 @@ ul {
 
 .menu #board-name:hover + .fa-pencil{
   display: inline-block;
+}
+
+.menu .editing-board-name button.success-button,
+.menu .editing-board-name input,
+.menu .editing-board-name a.blue {
+  vertical-align: middle;
+  margin: 0 5px 0 0;
+}
+
+.menu .editing-board-name a.blue {
+  font-size: .9em;
 }
 
 .delete {
