Updates from 4d4ff33 Glauber Ramos Merge pull request #148 from funretro/122-improve-votes

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -18,9 +18,11 @@
 </script>
 <script type="text/ng-template" id="addNewBoard">
   <h1>New board</h1>
-  <p>Board name example: <strong>team-board-123</strong></p>
-  <input ng-model="newBoard.name" type="text" placeholder="Board name"></input>
-  <button ng-click="createNewBoard()">Create</button>
+  <label>Board name</label>
+  <input ng-model="newBoard.name" type="text"></input>
+  <label>Max votes per user <small>(whole board)</small></label>
+  <input ng-model="newBoard.max_votes" type="number" ng-init="newBoard.max_votes = 6"></input>
+  <button ng-disabled="isBoardNameInvalid()"  ng-click="createNewBoard()">Create</button>
 </script>
 <script type="text/ng-template" id="deleteCard">
   <h1>Delete note</h1>
