--- a/components/header.html
+++ b/components/header.html
@@ -11,6 +11,7 @@
             </blockquote>
           </span>
       </span>
+      <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
       <button id="copy-board" ng-click="modalService.openCopyBoard(this)">Export board</button>
       <button class="first" ng-click="modalService.openAddNewBoard(this)">New board</button>
     </span>
