--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -31,6 +31,7 @@
   margin-left: 15px;
   flex-basis: 0;
   flex-grow: 1;
+  padding-bottom: 15px;
 
   @media (max-width: 500px) {
     margin: 0 15px;
