--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -13,16 +13,17 @@
 </script>
 <script type="text/ng-template" id="addNewColumn">
   <h1>New column</h1>
-  <input ng-model="newColumn" type="text"></input>
+  <input ng-model="newColumn" type="text" ng-keyup="($event.keyCode == 13)?addNewColumn(newColumn):null"></input>
   <button ng-click="addNewColumn(newColumn); newColumn='';">Add</button>
 </script>
 <script type="text/ng-template" id="addNewBoard">
   <h1>New board</h1>
+
   <label>Board name</label>
-  <input ng-model="newBoard.name" type="text"></input>
+  <input ng-model="newBoard.name" type="text" ng-keyup="($event.keyCode == 13)?isBoardNameInvalid()?null:createNewBoard():null"></input>
   <label>Max votes per user <small>(whole board)</small></label>
-  <input ng-model="newBoard.max_votes" type="number" ng-init="newBoard.max_votes = 6"></input>
-  <button ng-disabled="isBoardNameInvalid()"  ng-click="createNewBoard()">Create</button>
+  <input ng-model="newBoard.max_votes" type="number" ng-init="newBoard.max_votes = 6" ng-keyup="($event.keyCode == 13)?isBoardNameInvalid()?null:createNewBoard():null"></input>
+  <button ng-disabled="isBoardNameInvalid()" ng-click="createNewBoard()">Create</button>
 </script>
 <script type="text/ng-template" id="deleteCard">
   <h1>Delete note</h1>
