--- a/components/menu.html
+++ b/components/menu.html
@@ -12,6 +12,9 @@
     <option value="votes">Votes</option>
   </select>
   <span ng-show="voteService.remainingVotes(userId, maxVotes, messages) < maxVotes" class="remaining-votes">Remaining votes: <strong>{{ voteService.remainingVotes(userId, maxVotes, messages) }}</strong></span>
+  <span class="maximum-votes"> Maximum votes: <strong>{{ maxVotes }}</strong> </span>
+  <span><i class="fa fa-plus-square fa-lg" ng-click="incrementMaxVotes();" aria-hidden="true"></i></span>
+  <span><i class="fa fa-minus-square fa-lg" ng-click="decrementMaxVotes();" aria-hidden="true"></i></span>
   <span class="pull-right menu-controls">
     <button class="pull-right new-column" ng-show="board.columns.length < 6" ng-click="modalService.openAddNewColumn(this)">New column</button>
     <button class="pull-right delete-button" ng-click="modalService.openDeleteCards(this)">Delete cards</button>
