--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -39,7 +39,7 @@
   }
 }
 
-.remaining-votes {
+.remaining-votes, .maximum-votes {
   padding: 8px 12px;
   margin-right: 10px;
   border-radius: 2px;
