Added first version of import cards mechanism
Added:
- Serverside route that parses csv and returnes back arrays
- Client side dialog for importing cards
- Code that calls API and add cards
- Updaed package json with new dependencies

Note that the following components were added:
- multer - server-side middleware to process multi-part file streams
- csv-parse - server-side component to parse csv files
- ng-file-upload - client-side component to extend with upload angular
directives.

TODO:
[] Fix "blure" defect
[] Perform testing with different csv formats
[] Add options for csv parsing
[] Add unit tests
[] Optimize layout
[] Optimize code
[] Refactoring (?

--- a/components/header.html
+++ b/components/header.html
@@ -11,6 +11,7 @@
             </blockquote>
           </span>
       </span>
+      <button id="import-board" ng-click="modalService.openImportBoard(this)">Import board</button>
       <button id="copy-board" ng-click="modalService.openCopyBoard(this)">Export board</button>
       <button class="first" ng-click="modalService.openAddNewBoard(this)">New board</button>
     </span>
