adds spaces for IF and removes null

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -22,7 +22,7 @@
   <label>Board name</label>
   <input ng-model="newBoard.name" type="text" ng-keyup="submitOnEnter($event, 'createNewBoard')"></input>
   <label>Max votes per user <small>(whole board)</small></label>
-  <input ng-model="newBoard.max_votes" type="number" ng-init="newBoard.max_votes = 6" ng-keyup="submitOnEnter($event, 'createNewBoard', 'null')"></input>
+  <input ng-model="newBoard.max_votes" type="number" ng-init="newBoard.max_votes = 6" ng-keyup="submitOnEnter($event, 'createNewBoard')"></input>
   <button ng-disabled="isBoardNameInvalid()" ng-click="createNewBoard()">Create</button>
 </script>
 <script type="text/ng-template" id="deleteCard">
