Removed server code. Added client implementation

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -46,11 +46,11 @@
   <h1>Import cards</h1>
   <span >
     <p>1.<a type="file" ngf-select="submitImportFile($file)" ngf-pattern="text/csv" accept="text/csv" ngf-max-size="10KB">Submit</a> a csv file </p>
-    <p>2.  Setup fields mapping</button></p>
-    <p ng-repeat="column in importMapping track by $index">{{column.name}} 
+    <p>2. Setup fields mapping</button></p>
+    <p ng-repeat="column in import.mapping track by $index">{{column.name}} 
       <select ng-model="column.map_from">
         <option select="selected" value="">[Select csv column]</option>
-        <option ng-repeat="importColumn in importData[0]" value="{{$index}}">{{importColumn}}</option>
+        <option ng-repeat="importColumn in import.data[0]" value="{{$index}}">{{importColumn}}</option>
       </select>
     </p>
     <button ng-click="importMessages()">Import</button>
