[#138] Minor layout improvements

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -46,14 +46,18 @@
 <script type="text/ng-template" id="importCards">
   <h1>Import cards</h1>
   <span >
-    <p>1.<a type="file" ngf-select="submitImportFile($file)" ngf-pattern="text/csv" accept="text/csv" ngf-max-size="10KB">Submit</a> a csv file </p>
+    <p>1. <a style="margin:0" type="file" ngf-select="submitImportFile($file)" ngf-pattern="text/csv" accept="text/csv" ngf-max-size="10KB"> Submit</a> a csv file </p>
     <p>2. Setup fields mapping</button></p>
-    <p ng-repeat="column in import.mapping track by $index">{{column.name}} 
-      <select ng-model="column.mapFrom">
-        <option select="selected" value="">[Select csv column]</option>
-        <option ng-repeat="importColumn in import.data[0]" value="{{$index}}">{{importColumn}}</option>
-      </select>
-    </p>
+    <table>
+      <tr ng-repeat="column in import.mapping track by $index">
+        <td style="text-align:right">{{column.name}}</td>
+        <td style="text-align:left">
+          <select style="width:138" ng-model="column.mapFrom">
+            <option select="selected" value="">[Select csv column]</option>
+            <option ng-repeat="importColumn in import.data[0]" value="{{$index}}">{{importColumn}}</option>
+          </select>
+        </td> 
+    </table>
     <button ng-click="importMessages()">Import</button>
     <a ng-click="closeAllModals()">Cancel</a>
     </span>
