--- a/components/menu.html
+++ b/components/menu.html
@@ -12,7 +12,8 @@
     <option value="votes">Votes</option>
   </select>
   <span ng-show="voteService.remainingVotes(userId, maxVotes, messages) < maxVotes" class="remaining-votes">Remaining votes: <strong>{{ voteService.remainingVotes(userId, maxVotes, messages) }}</strong>
-    <span class="settings"><i class='fa fa-pencil fa-lg'></i></span>
+    <span class="null-blank-space">&nbsp</span>
+    <span class="settings" ng-click="modalService.openVoteSettings(this)"><i class='fa fa-pencil fa-lg'></i></span>
   </span>
 
   <span class="pull-right menu-controls">
