--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -58,7 +58,7 @@
           </select>
         </td> 
     </table>
-    <button ng-click="importMessages(); cleanImportData()" ng-class="{'disabled': importColumn > 0 }" >Import</button>
+    <button ng-click="importMessages(); cleanImportData()">Import</button>
     <a ng-click="closeAllModals(); cleanImportData()">Cancel</a>
     </span>
 </script>
